# FD-AutoPilot

./: .gitignore  notebooklm-auto-extract.js  notebooklm-test.html
data/: sync_state.json
data/tickets/: 10000_pending.json  10001_pending.json  10002_pending.json  10003_pending.json  10004_resolved.json  10004_resolved_cn.json  10004_resolved_en.json  10005_open.json  10005_pending.json  10006_pending.json  10009_pending.json  10010_pending.json  10011_pending.json  10012_pending.json  10013_pending.json  10014_pending.json  10015_pending.json  10016_pending.json  10017_pending.json  10018_pending.json  10019_pending.json  10020_pending.json  10021_pending.json  10022_pending.json  10023_pending.json  10024_pending.json  10025_open.json  10025_pending.json  10026_closed.json  10027_pending.json  10028_pending.json  10029_pending.json  10030_pending.json  10031_pending.json  10032_pending.json  10035_closed.json  10036_pending.json  10037_pending.json  10039_pending.json  1003_resolved.json  (+6682 more)
doc/: project-documentation.md  system-design.md
fd-client/: package-lock.json  package.json
fd-client/src/: App.css  App.tsx  AppNew.tsx  index.css  main.tsx  types.ts
fd-client/src-tauri/: Cargo.toml  tauri.conf.json
fd-client/src-tauri/capabilities/: default.json
fd-client/src-tauri/src/: ai.rs  api.rs  lib.rs  main.rs  models.rs  mq_consumer.rs  settings.rs  storage.rs
fd-client/src/components/: BrowseTab.tsx  Common.tsx  MQTaskRunner.tsx  NotebookLMChat.css  NotebookLMChat.tsx  Sidebar.tsx  (+5 more)
fd-server/: pom.xml
fd-server/data/: db.lock.db  db.mv.db  db.trace.db
(+71 files in other folders)
